# 41127-SoftwareDesignStudio-CourseRecommendationSystem

back-end/: Dockerfile  courses.json  features.json  pyproject.toml
back-end/db_setup/: data.json
back-end/service/dev/: docker-compose.yml
back-end/service/src/: app.py  config.py  conftest.py  container.py  main_utils.py  models.py
back-end/service/src/analytics/: service.py
back-end/service/src/db_handler/: db_handler.py  password.py
back-end/service/src/db_handler/tests/: test_db_handler.py  test_password.py
back-end/service/src/db_setup/: data.json  db_connect.py  db_create.py  db_delete.py  db_delete_and_create.py  db_model.py  ingest_data.py
back-end/service/src/orchestrator/: orchestrator.py  orchestrator_utils.py
back-end/service/src/router/: requests.py  responses.py  router_utils.py  routes.py
back-end/service/src/tests/: mock_data.py
front-end/: package.json
front-end/src/app/: globals.css  layout.tsx  page.tsx
front-end/src/app/admin/: page.tsx
front-end/src/app/edit-courses/: page.tsx
front-end/src/app/edit-students/: page.tsx
front-end/src/app/sign-up/: page.tsx
front-end/src/components/: progressBar.scss  progressBar.tsx
front-end/src/components/AdminComponents/: Interfaces.tsx
front-end/src/components/Button/: Button.module.scss  Button.tsx
front-end/src/components/FormElement/: FormElement.module.scss  FormElement.tsx
front-end/src/components/InputField/: InputField.module.scss  InputField.tsx
front-end/src/middleware/: api.tsx
knn_algorithm/: courses.json  features.json  main.py  pyproject.toml  test1.py
(+54 files in other folders)
